--- a/demo.html
+++ b/demo.html
@@ -19,7 +19,7 @@
             <q-field name="last_name"></q-field>
         </q-select>
         <q-from>
-            <q-collection name="person"></q-collection>
+            <q-dataset name="person"></q-dataset>
         </q-from>
         <q-where>
             <q-filter field="first_name" op="equals" value="Foo"></q-filter>
