added logic for null operation

--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
     <query-base outputQuery="{{outputQuery}}">
         <q-select>
             <q-field expr="gndr" as="gender"></q-field>
-            <q-field expr="count(*)" as="gender_count"></field>
+            <q-field expr="count(*)" as="gender_count"></q-field>
         </q-select>
         <q-from>
             <q-dataset name="employment_records"></q-dataset>
