--- a/query-base.html
+++ b/query-base.html
@@ -50,12 +50,14 @@ Element providing base query support for varying datasources
                 this.whereConditions = [];
                 this.groupByFields = [];
             },
-            ready: function() {
+            domReady: function() {
                 this.update();
             },
             update: function() {
-                this.selectFields = this.$.querySelect.getDistributedNodes()[0].queryFields;
-                this.fromDatasets = this.$.queryFrom.getDistributedNodes()[0].fromDatasets;
+                if (this.$.querySelect.getDistributedNodes()[0])
+                    this.selectFields = this.$.querySelect.getDistributedNodes()[0].queryFields;
+                if (this.$.queryFrom.getDistributedNodes()[0])
+                    this.fromDatasets = this.$.queryFrom.getDistributedNodes()[0].fromDatasets;
                 if (this.$.queryWhere.getDistributedNodes()[0])
                     this.whereConditions = this.$.queryWhere.getDistributedNodes()[0].whereConditions;
                 if (this.$.queryGroupBy.getDistributedNodes()[0])
@@ -64,6 +66,9 @@ Element providing base query support for varying datasources
             },
             //TODO: consider putting this in sql-query and extending it which would extend query-base
             updateOutputQuery: function() {
+                if (!this.selectFields)
+                    return;
+
                 var select = 'select ';
                 for (var i = 0; i < this.selectFields.length; ++i) {
                     if (i > 0 && this.selectFields.length > 1)
@@ -121,6 +126,7 @@ Element providing base query support for varying datasources
 
 
                 this.outputQuery.sql = select + from + where + groupBy;
+                this.fire('query-change', this.outputQuery);
             }
         });
     </script>
